--- a/Grpc.Tools.MsBuild.Core/Grpc.Tools.MsBuild.Core.csproj
+++ b/Grpc.Tools.MsBuild.Core/Grpc.Tools.MsBuild.Core.csproj
@@ -7,7 +7,7 @@
     <BuildOutputTargetFolder>tasks</BuildOutputTargetFolder>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  
+
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Shuai Zhang</Authors>
@@ -27,18 +27,18 @@
     <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.3.409" PrivateAssets="All" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="2.0.41" PrivateAssets="All" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <Compile Include="..\external\grpc\src\csharp\Grpc.Core\Internal\PlatformApis.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="build\Grpc.Tools.MsBuild.props" PackagePath="build\" />
-    <Content Include="build\Grpc.Tools.MsBuild.targets" PackagePath="build\" />
-    <Content Include="buildMultiTargeting\Grpc.Tools.MsBuild.props" PackagePath="buildMultiTargeting\" />
-    <Content Include="buildMultiTargeting\Grpc.Tools.MsBuild.targets" PackagePath="buildMultiTargeting\" />
-    <Content Include="..\README.md" PackagePath="\" />
-    <Content Include="..\LICENSE.txt" PackagePath="\" />
+    <!-- <Content Include="..\README.md" PackagePath="\" />
+    <Content Include="..\LICENSE.txt" PackagePath="\" /> -->
+    <Content Include="build\Grpc.Tools.MsBuild.Unofficial.props" PackagePath="build\" />
+    <Content Include="build\Grpc.Tools.MsBuild.Unofficial.targets" PackagePath="build\" />
+    <Content Include="buildMultiTargeting\Grpc.Tools.MsBuild.Unofficial.props" PackagePath="buildMultiTargeting\" />
+    <Content Include="buildMultiTargeting\Grpc.Tools.MsBuild.Unofficial.targets" PackagePath="buildMultiTargeting\" />
   </ItemGroup>
 
 </Project>
