--- a/Tests/GreetingClient/GreetingClient.csproj
+++ b/Tests/GreetingClient/GreetingClient.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.Tools.MsBuild.Unofficial" Version="1.0.2-*" PrivateAssets="All" />
+    <PackageReference Include="Grpc.Tools.MsBuild.Unofficial" Version="1.0.3-*" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProtoFile Include="..\..\external\grpc\examples\protos\helloworld.proto" />
   </ItemGroup>
 
 </Project>
