--- a/Tests/GreetingClient/GreetingClient.csproj
+++ b/Tests/GreetingClient/GreetingClient.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.Tools.MsBuild.Unofficial" Version="1.0.4-*" PrivateAssets="All" />
+    <PackageReference Include="Grpc" Version="1.6.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.4.1" />
+    <PackageReference Include="Grpc.Tools.MsBuild.Unofficial" Version="1.0.5-*" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
     <ProtoFile Include="..\..\external\grpc\examples\protos\helloworld.proto" />
+    <Compile Include="..\..\external\grpc\examples\csharp\helloworld\GreeterClient\Program.cs" />
   </ItemGroup>
 
 </Project>
