--- a/Grpc.Tools.MsBuild.Core/buildMultiTargeting/Grpc.Tools.MsBuild.Unofficial.props
+++ b/Grpc.Tools.MsBuild.Core/buildMultiTargeting/Grpc.Tools.MsBuild.Unofficial.props
@@ -1,3 +1,3 @@
 <Project>
-  <Import Project="..\build\Grpc.Tools.MsBuild.props" />
+  <Import Project="..\build\Grpc.Tools.MsBuild.Unofficial.props" />
 </Project>
