--- a/Grpc.Tools.MsBuild.Core/buildMultiTargeting/Grpc.Tools.MsBuild.Unofficial.targets
+++ b/Grpc.Tools.MsBuild.Core/buildMultiTargeting/Grpc.Tools.MsBuild.Unofficial.targets
@@ -1,3 +1,3 @@
 <Project>
-  <Import Project="..\build\Grpc.Tools.MsBuild.targets" />
+  <Import Project="..\build\Grpc.Tools.MsBuild.Unofficial.targets" />
 </Project>
