--- a/Tests/NuGet.config
+++ b/Tests/NuGet.config
@@ -1,7 +1,7 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="localDebug" value="D:\GitEnlistments\Grpc.Tools.MsBuild\Grpc.Tools.MsBuild.Core\bin\Debug" />
+    <add key="myget.org" value="https://www.myget.org/F/shuaiz/api/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
