--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,11 +2,21 @@ image: Visual Studio 2017
 
 configuration: Release
 
+deploy:
+  provider: Environment
+  name: myget
+
 install:
   - git submodule update --init
 
-build_script:
-  - ps: ./build.ps1
+before_build:
+  - dotnet restore
+
+build:
+  parallel: true
+  project: Grpc.Tools.MsBuild.sln
+
+test: off
 
 artifacts:
   - path: '**\*.nupkg'
