--- a/Tests/version.props
+++ b/Tests/version.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup>
-    <TestPackageVersion>1.0.9-*</TestPackageVersion>
+    <TestPackageVersion>1.0.9-beta.g4847678056</TestPackageVersion>
   </PropertyGroup>
 
 </Project>
