--- a/Tests/GreetingServer/GreetingServer.csproj
+++ b/Tests/GreetingServer/GreetingServer.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net462</TargetFramework>
-    <!--<TargetFramework>netcoreapp2.0</TargetFramework>-->
+    <TargetFramework>net462;netcoreapp1.1</TargetFramework>
+    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp1.1</TargetFrameworks>
   </PropertyGroup>
 
   <Import Project="../version.props" />
