Manually checkout submodule on travis for acceleration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,11 @@ matrix:
 
 git:
   depth: 3
+  submodules: false
 
 install:
   - git fetch --unshallow
+  - git submodule update --init
   - dotnet restore
 
 script:
