Mono only build net46 & net462 target

--- a/Grpc.Tools.MsBuild.Core/Grpc.Tools.MsBuild.Core.csproj
+++ b/Grpc.Tools.MsBuild.Core/Grpc.Tools.MsBuild.Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net46;netstandard1.5</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netstandard1.5</TargetFrameworks>
+    <TargetFrameworks Condition="'$(MONO_BUILD)' != ''">net46</TargetFrameworks>
     <!-- Suppresses the warnings about the package not having assemblies in lib/*/.dll.-->
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <BuildOutputTargetFolder>tasks</BuildOutputTargetFolder>
