Revert "Use new package for testing."
This reverts commit 4cc013883b567c5149abf282086f794f81aa8129.

--- a/Tests/version.props
+++ b/Tests/version.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup>
-    <TestPackageVersion>1.0.27-beta.ge70dd02d48</TestPackageVersion>
+    <TestPackageVersion>1.0.9-beta.g4847678056</TestPackageVersion>
   </PropertyGroup>
 
 </Project>
